# llama-search-demo

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  ui.py
app/: infrastructure.py  loader.py  retriever.py  storer.py  translator.py
app/recruiting/: internet_search.py  prompting.py  recruiting.py
documentation/: example.puml
